# chii

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: simple_record.rs
proptest-regressions/core/: vie.txt
scripts/: GenerateReferenceValues.ps1
src/: bit.rs  co.rs  comp.rs  data.rs  encode.rs  glob.rs  int.rs  lib.rs  main.rs  math.rs  schema.rs  transcode.rs  vie.rs
src/co/: test.rs
src/comp/: boolean.rs  enumeration.rs  identity.rs
src/compress/: boolean.rs  enumeration.rs  huffman.rs  mod.rs  numerical.rs  uuid.rs
src/core/: integer.rs  math.rs  mod.rs  vie.rs
